// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > snapshots > matches snapshot for all size variants > button-large 1`] = `
<button
  class="storybook-button storybook-button--large storybook-button--secondary"
  type="button"
>
  large snapshot
</button>
`;

exports[`Button > snapshots > matches snapshot for all size variants > button-medium 1`] = `
<button
  class="storybook-button storybook-button--medium storybook-button--secondary"
  type="button"
>
  medium snapshot
</button>
`;

exports[`Button > snapshots > matches snapshot for all size variants > button-small 1`] = `
<button
  class="storybook-button storybook-button--small storybook-button--secondary"
  type="button"
>
  small snapshot
</button>
`;

exports[`Button > snapshots > matches snapshot for default button 1`] = `
<button
  class="storybook-button storybook-button--medium storybook-button--secondary"
  type="button"
>
  Default Snapshot
</button>
`;

exports[`Button > snapshots > matches snapshot for primary button 1`] = `
<button
  class="storybook-button storybook-button--medium storybook-button--primary"
  type="button"
>
  Primary Snapshot
</button>
`;

exports[`Button > snapshots > matches snapshot with custom background color 1`] = `
<button
  class="storybook-button storybook-button--medium storybook-button--secondary"
  style="background-color: rgb(76, 175, 80);"
  type="button"
>
  Custom Color Snapshot
</button>
`;
